force-app/main/default/objects/Prescription_Line_Item__c/Prescription_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Prescription Line Item.</description>
    <label>Prescription Line Item</label>
    <nameField>
        <displayFormat>RXLINE-{00000}</displayFormat>
        <label>Prescription Line</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescription Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>