force-app/main/default/objects/Prescription_Line_Item__c/fields/Afternoon__c.field-meta.xml
<CustomField>
    <fullName>Afternoon__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Afternoon</label>
    <type>Checkbox</type>
</CustomField>