force-app/main/default/objects/Prescription_Line_Item__c/fields/Consumption__c.field-meta.xml
<CustomField>
    <fullName>Consumption__c</fullName>
    <label>Consumption</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Food</fullName>
            </value>
            <value>
                <fullName>After Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>