force-app/main/default/objects/Prescription_Line_Item__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <label>Dosage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>