force-app/main/default/objects/Prescription_Line_Item__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Medicine</label>
    <referenceTo>Medicine__c</referenceTo>
    <relationshipLabel>Prescription Line Items</relationshipLabel>
    <relationshipName>Prescription_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>