force-app/main/default/objects/Prescription_Line_Item__c/fields/Morning__c.field-meta.xml
<CustomField>
    <fullName>Morning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Morning</label>
    <type>Checkbox</type>
</CustomField>