force-app/main/default/objects/Prescription_Line_Item__c/fields/Night__c.field-meta.xml
<CustomField>
    <fullName>Night__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night</label>
    <type>Checkbox</type>
</CustomField>