force-app/main/default/objects/Prescription_Line_Item__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <label>Prescription</label>
    <referenceTo>Prescription__c</referenceTo>
    <relationshipLabel>Prescription Line Items</relationshipLabel>
    <relationshipName>Prescription_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>