force-app/main/default/objects/Prescription_Line_Item__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <formula>(
IF(Morning__c,1,0)
+
IF(Afternoon__c,1,0)
+
IF(Night__c,1,0)
)
*
Duration_Days__c
*
Medicine__r.Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>